--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:background="@android:color/white"
-              android:orientation="vertical">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:gravity="center"
+    android:orientation="vertical">
+    <ImageView
+        android:id="@+id/iv_choose_mv"
+        android:layout_width="match_parent"
+        android:src="@android:drawable/divider_horizontal_dark"
+        android:layout_height="60dp" />
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@android:color/holo_blue_light"
         android:minHeight="200dp">
 
@@ -17,14 +21,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/biz_video_list_play_icon_big"/>
+            android:src="@drawable/biz_video_list_play_icon_big" />
 
-        <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
-            android:id="@+id/video_player_item_1"
+        <LinearLayout
+            android:id="@+id/layout_video"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:visibility="gone">
-        </com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
+                android:id="@+id/video_player_item_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:visibility="gone"></com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
+
+            <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
+                android:id="@+id/video_player_item_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:visibility="gone"></com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
+
+        </LinearLayout>
 
     </FrameLayout>
 
